--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 .navigation {
     width: 100%;
     height: 100vh;
-    background-image: url('img/bg1.jpg');
+    background-image: url('../img/bg1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
